--- a/modules/sanger-tol/blobtk/plot/meta.yml
+++ b/modules/sanger-tol/blobtk/plot/meta.yml
@@ -30,7 +30,7 @@ input:
           Input assembly FASTA.
         pattern: "*.fasta"
         ontologies:
-          - edam: http://edamontology.org/format_1929
+          - edam: http://edamontology.org/format_1929 # FASTA
   - local_path:
       type: directory
       description: |
@@ -60,7 +60,8 @@ output:
           type: file
           description: |
             Blobplot PNG results of input arguments.
-          ontologies: []
+          ontologies:
+            - edam: http://edamontology.org/format_3603
   versions:
     - versions.yml:
         type: file
