re-comment meta.yml

--- a/modules/sanger-tol/blobtk/plot/meta.yml
+++ b/modules/sanger-tol/blobtk/plot/meta.yml
@@ -41,12 +41,12 @@ input:
       description: |
         A webaddress to a Blob Dir e.g. hosted on a BlobToolKit Viewer.
       pattern: "*/"
-  - blobtk_args:
-      type: map
-      description: |
-        A string of arguments to be used to generate a BlobPlot.
-        These are provided as an argument to allow for paralelising a list of
-        provided arguments. In the style of `[name: "", args: ""]`.
+      # - blobtk_args:
+      #     type: map
+      #     description: |
+      #       A string of arguments to be used to generate a BlobPlot.
+      #       These are provided as an argument to allow for paralelising a list of
+      #       provided arguments. In the style of `[name: "", args: ""]`.
 
 output:
   png:
