--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,6 +39,21 @@ repos:
         files: ^subworkflows/nf-core/.*/meta\.yml$
         types: [yaml]
         args: ["--schemafile", "subworkflows/yaml-schema.json"]
+      - id: check-jsonschema
+        name: "Match meta.ymls in one of the subdirectories of modules/sanger-tol"
+        files: ^modules/sanger-tol/.*/meta\.yml$
+        types: [yaml]
+        args: ["--schemafile", "modules/yaml-schema.json"]
+      - id: check-jsonschema
+        name: "Validate environment.ymls against schema"
+        files: ^modules/sanger-tol/.*/environment\.yml$
+        types: [yaml]
+        args: ["--schemafile", "modules/environment-schema.json"]
+      - id: check-jsonschema
+        name: "Match meta.ymls in one of the subdirectories of subworkflows/sanger-tol"
+        files: ^subworkflows/sanger-tol/.*/meta\.yml$
+        types: [yaml]
+        args: ["--schemafile", "subworkflows/yaml-schema.json"]
       - id: check-github-workflows
 
   # use ruff for python files
