--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -32,6 +32,14 @@ runs:
       with:
         python-version: "3.13"
 
+    - name: Install pip
+      run: |
+        python -m pip install --upgrade pip
+
+    - name: Install nf-core tools development version
+      run: |
+        python -m pip install --upgrade --force-reinstall git+https://github.com/nf-core/tools.git@dev
+
     - name: Set up nf-test
       uses: nf-core/setup-nf-test@v1
       with:
