--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -33,10 +33,12 @@ runs:
         python-version: "3.13"
 
     - name: Install pip
+      shell: bash
       run: |
         python -m pip install --upgrade pip
 
     - name: Install nf-core tools development version
+      shell: bash
       run: |
         python -m pip install --upgrade --force-reinstall git+https://github.com/nf-core/tools.git@dev
 
