--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,10 @@
 name: Run Linting
 on:
   pull_request:
-    branches: [master]
+    branches: [main]
   merge_group:
     types: [checks_requested]
-    branches: [master]
+    branches: [main]
   workflow_dispatch:
     inputs:
       runners:
