--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -4,12 +4,12 @@ on:
     paths-ignore:
       - "**/meta.yml"
   pull_request:
-    branches: [master]
+    branches: [main]
     paths-ignore:
       - "**/meta.yml"
   merge_group:
     types: [checks_requested]
-    branches: [master]
+    branches: [main]
   workflow_dispatch:
 
 # Cancel if a newer run is started
@@ -54,7 +54,7 @@ jobs:
         uses: adamrtalbot/detect-nf-test-changes@de3c3c8e113031b4f15a3c1104b5f135e8346997 # v0.0.6
         with:
           head: ${{ github.sha }}
-          base: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha || 'origin/master' }}
+          base: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha || 'origin/main' }}
           n_parents: 0
           exclude_tags: "gpu"
 
