lint(cramalign): fix some references to old names

--- a/subworkflows/sanger-tol/hic_mapping/meta.yml
+++ b/subworkflows/sanger-tol/hic_mapping/meta.yml
@@ -7,7 +7,7 @@ keywords:
   - align
   - bam
 components:
-  - cramalign/countcramchunks
+  - cramalign/gencramchunks
   - cramalign/bwamem2alignhic
   - cramalign/minimap2alignhic
   - samtools/index:
