--- a/modules/sanger-tol/longranger/align/tests/nextflow.config
+++ b/modules/sanger-tol/longranger/align/tests/nextflow.config
@@ -1,6 +1,6 @@
 process {
     withName: 'LONGRANGER_MKREF' {
         // Internally accessible to for Sanger only
-        container = "ghcr.io/sanger-tol/longranger:2.2.2-c5"
+        container = params.longranger_test_container_path
     }
 }
