fix(longranger): quote string

--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -3,8 +3,8 @@ params {
     singularity_pull_docker_container = false
     test_data_base = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules'
     modules_testdata_base_path = 'https://tolit.cog.sanger.ac.uk/test-data/'
-    longranger_test_container_path = System.getenv('GITHUB_ACTION') ?
-        ghcr.io/sanger-tol/longranger:2.2.2-c5 :
+    longranger_test_container_path = env('GITHUB_ACTION') ?
+        "ghcr.io/sanger-tol/longranger:2.2.2-c5" :
         "gitlab-registry.internal.sanger.ac.uk/tol-it/software/docker-images/longranger:2.2.2-c5"
 }
 
