--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -4,7 +4,7 @@ params {
     test_data_base = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules'
     modules_testdata_base_path = 'https://tolit.cog.sanger.ac.uk/test-data/'
     longranger_test_container_path = env('GITHUB_ACTION') ?
-        "ghcr.io/sanger-tol/longranger:2.2.2-c5" :
+        ghcr.io/sanger-tol/longranger:2.2.2-c5 :
         "gitlab-registry.internal.sanger.ac.uk/tol-it/software/docker-images/longranger:2.2.2-c5"
 }
 
