--- a/modules/sanger-tol/longranger/mkref/tests/nextflow.config
+++ b/modules/sanger-tol/longranger/mkref/tests/nextflow.config
@@ -1,6 +1,9 @@
 process {
     withName: 'LONGRANGER_MKREF' {
         // Internally accessible to for Sanger only
-        container = params.longranger_test_container_path
+        container = { env('GITHUB_ACTION') ?
+            "ghcr.io/sanger-tol/longranger:2.2.2-c5" :
+            "gitlab-registry.internal.sanger.ac.uk/tol-it/software/docker-images/longranger:2.2.2-c5"
+        }
     }
 }
