--- a/modules/sanger-tol/longranger/align/tests/nextflow.config
+++ b/modules/sanger-tol/longranger/align/tests/nextflow.config
@@ -6,4 +6,12 @@ process {
             "gitlab-registry.internal.sanger.ac.uk/tol-it/software/docker-images/longranger:2.2.2-c5"
         }
     }
+
+	withName: 'LONGRANGER_ALIGN' {
+        // Internally accessible to for Sanger only
+        container = { env('GITHUB_ACTION') ?
+            "ghcr.io/sanger-tol/longranger:2.2.2-c5" :
+            "gitlab-registry.internal.sanger.ac.uk/tol-it/software/docker-images/longranger:2.2.2-c5"
+        }
+    }
 }
