--- a/modules/sanger-tol/longranger/align/tests/nextflow.config
+++ b/modules/sanger-tol/longranger/align/tests/nextflow.config
@@ -8,6 +8,8 @@ process {
     }
 
 	withName: 'LONGRANGER_ALIGN' {
+        ext.args = params.longranger_align_args
+
         // Internally accessible to for Sanger only
         container = { env('GITHUB_ACTION') ?
             "ghcr.io/sanger-tol/longranger:2.2.2-c5" :
