fix(longranger): login to GHCR in nf-test action

--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -42,6 +42,15 @@ runs:
         version: "${{ env.NFT_VER }}"
         install-pdiff: true
 
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Check out pipeline code
+      uses: actions/checkout@v3
+
     - name: Set up apptainer
       if: contains(inputs.profile, 'singularity')
       shell: bash
