fix(longranger): bump minimum memory?

--- a/modules/sanger-tol/longranger/align/tests/nextflow.config
+++ b/modules/sanger-tol/longranger/align/tests/nextflow.config
@@ -9,6 +9,7 @@ process {
 
 	withName: 'LONGRANGER_ALIGN' {
         ext.args = params.longranger_align_args
+        memory   =  15.Gb
 
         // Internally accessible to for Sanger only
         container = { env('GITHUB_ACTION') ?
