--- a/subworkflows/sanger-tol/longread_mapping/tests/nextflow.config
+++ b/subworkflows/sanger-tol/longread_mapping/tests/nextflow.config
@@ -1,6 +1,6 @@
 
 process {
-    withName: CRAMALIGN_MINIMAP2ALIGNLONGREAD {
+    withName: CRAMALIGN_MINIMAP2ALIGN {
         ext.args1 = { "${params.samtools_cat_args}"     }
         ext.args2 = { "${params.samtools_fastq_args}"   }
         ext.args3 = { "${params.minimap2_args}"         }
