--- a/subworkflows/sanger-tol/longread_mapping/meta.yml
+++ b/subworkflows/sanger-tol/longread_mapping/meta.yml
@@ -9,7 +9,7 @@ keywords:
   - bam
 components:
   - cramalign/gencramchunks
-  - cramalign/minimap2alignlongread
+  - cramalign/minimap2align
   - samtools/index:
       git_remote: https://github.com/nf-core/modules.git
   - samtools/faidx:
