--- a/subworkflows/sanger-tol/gap_finder/nextflow.config
+++ b/subworkflows/sanger-tol/gap_finder/nextflow.config
@@ -3,4 +3,8 @@ process {
         ext.args2   = "'BEGIN { OFS = \"\\t\" }{print \$0, sqrt((\$3-\$2)*(\$3-\$2))}'"
         ext.suffix  = 'gap.bedgraph'
     }
+
+    withName: SEQTK_CUTN {
+        ext.args        = "-n 1"
+    }
 }
