--- a/modules/sanger-tol/ancestral/extract/meta.yml
+++ b/modules/sanger-tol/ancestral/extract/meta.yml
@@ -27,15 +27,14 @@ input:
           BUSCO full table tsv file.
         pattern: "*.tsv"
         ontologies:
-          - edam: http://edamontology.org/format_2572
           - edam: http://edamontology.org/format_3475 # TSV
+
   - ancestraltable:
       type: file
       description: |
         A reference TSV containing ancestrally linked genes.
       pattern: "*.tsv"
       ontologies:
-        - edam: http://edamontology.org/format_2572
         - edam: http://edamontology.org/format_3475 # TSV
 output:
   comp_location:
@@ -49,7 +48,7 @@ output:
           description: |
             TSV containing complete busco's thought to be ancestrally linked.
           ontologies:
-            - edam: http://edamontology.org/format_3003
+            - edam: http://edamontology.org/format_3475 # TSV
 
   dup_location:
     - - meta:
@@ -62,7 +61,7 @@ output:
           description: |
             TSV containing duplicated busco's thought to be ancestrally linked.
           ontologies:
-            - edam: http://edamontology.org/format_3003
+            - edam: http://edamontology.org/format_3475 # TSV
 
   summary:
     - - meta:
