--- a/modules/sanger-tol/ancestral/plot/meta.yml
+++ b/modules/sanger-tol/ancestral/plot/meta.yml
@@ -6,6 +6,7 @@ keywords:
   - pdf
   - png
   - ancestral
+  - busco
   - plot
 tools:
   - plot_buscopainter:
@@ -27,7 +28,6 @@ input:
           Complete location busco painter output.
         pattern: "*.tsv"
         ontologies:
-          - edam: http://edamontology.org/format_2572
           - edam: http://edamontology.org/format_3475 # TSV
   - - meta2:
         type: map
@@ -52,7 +52,7 @@ output:
           description: |
             A PNG plot showing busco gene linkage maps.
           ontologies:
-            - edam: http://edamontology.org/format_1915
+            - edam: http://edamontology.org/format_3603 # PNG
   pdf_plot:
     - - meta:
           type: map
@@ -64,7 +64,7 @@ output:
           description: |
             A PDF plot showing busco gene linkage maps.
           ontologies:
-            - edam: http://edamontology.org/format_3508
+            - edam: http://edamontology.org/format_3508 # PDF
 
   versions:
     - versions.yml:
