Update based on review

--- a/modules/sanger-tol/ancestral/plot/tests/nextflow.config
+++ b/modules/sanger-tol/ancestral/plot/tests/nextflow.config
@@ -1,5 +1,5 @@
 process {
     withName: ANCESTRAL_PLOT {
-        ext.args    = { '-m True -d True' }
+        ext.args    = { "${params.ancestral_plot_args}" }
     }
 }
