--- a/modules/sanger-tol/ancestral/extract/meta.yml
+++ b/modules/sanger-tol/ancestral/extract/meta.yml
@@ -29,13 +29,18 @@ input:
         ontologies:
           - edam: http://edamontology.org/format_3475 # TSV
 
-  - ancestraltable:
-      type: file
-      description: |
-        A reference TSV containing ancestrally linked genes.
-      pattern: "*.tsv"
-      ontologies:
-        - edam: http://edamontology.org/format_3475 # TSV
+  - - meta2:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. `[ id:'sample1' ]`
+    - ancestraltable:
+        type: file
+        description: |
+          A reference TSV containing ancestrally linked genes.
+        pattern: "*.tsv"
+        ontologies:
+          - edam: http://edamontology.org/format_3475 # TSV
 output:
   comp_location:
     - - meta:
