--- a/subworkflows/sanger-tol/gap_finder/tests/nextflow.config
+++ b/subworkflows/sanger-tol/gap_finder/tests/nextflow.config
@@ -1,6 +1,6 @@
 process {
     withName: GAWK {
-        ext.args2   = "'BEGIN { OFS = \"\\t\" }{print \$0, sqrt((\$3-\$2)*(\$3-\$2))}'"
+        ext.args2   = { ${params.gawk_args" }
         ext.suffix  = 'gap.bedgraph'
     }
 
