--- a/subworkflows/sanger-tol/gap_finder/tests/nextflow.config
+++ b/subworkflows/sanger-tol/gap_finder/tests/nextflow.config
@@ -5,6 +5,6 @@ process {
     }
 
     withName: SEQTK_CUTN {
-        ext.args        = "-n 1"
+        ext.args        = { ${params.seqtk_args" }
     }
 }
