--- a/subworkflows/sanger-tol/gap_finder/tests/nextflow.config
+++ b/subworkflows/sanger-tol/gap_finder/tests/nextflow.config
@@ -1,10 +1,10 @@
 process {
     withName: GAWK {
-        ext.args2   = { "${params.gawk_args" }
+        ext.args2   = { "${params.gawk_args}" }
         ext.suffix  = 'gap.bedgraph'
     }
 
     withName: SEQTK_CUTN {
-        ext.args        = { "${params.seqtk_args" }
+        ext.args        = { "${params.seqtk_args}" }
     }
 }
