--- a/modules/sanger-tol/longranger/align/meta.yml
+++ b/modules/sanger-tol/longranger/align/meta.yml
@@ -1,6 +1,12 @@
 name: longranger_align
-description: Performs alignment of Illumina 10X sequencing data to the indexed reference
-  genome
+description: |
+  Performs alignment of Illumina 10X sequencing data to a Longranger indexed reference
+  genome.
+
+  Does not have a container configured - a pipeline using this module must supply one
+  via the config file. The container defined in the module test is accessible interally
+  to Sanger users only and will need to be changed if outside users wish to test the
+  module.
 keywords:
   - longranger
   - 10X
