Apply suggestion from @prototaxites
Co-authored-by: Jim Downie <19718667+prototaxites@users.noreply.github.com>

--- a/modules/sanger-tol/telomere/regions/meta.yml
+++ b/modules/sanger-tol/telomere/regions/meta.yml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "telomere_regions"
 description: |
-  Identify regions of the assembly matching a given sequencew
+  Identify regions of the assembly matching a given sequence
 keywords:
   - telomere
   - regions
