Apply suggestion from @prototaxites
Co-authored-by: Jim Downie <19718667+prototaxites@users.noreply.github.com>

--- a/modules/sanger-tol/telomere/regions/meta.yml
+++ b/modules/sanger-tol/telomere/regions/meta.yml
@@ -30,7 +30,7 @@ input:
   - telomereseq:
       type: string
       description: |
-        The telomere motif
+        A string containing the DNA sequence of a telomere motif
       ontologies: []
 output:
   telomere:
