Update based on suggestions

--- a/modules/sanger-tol/telomere/windows/tests/nextflow.config
+++ b/modules/sanger-tol/telomere/windows/tests/nextflow.config
@@ -2,6 +2,6 @@ nextflow.enable.moduleBinaries = true
 
 process {
     withName: TELOMERE_WINDOWS {
-        ext.telomere_jar = { "${moduleDir}/resources/usr/bin/telomere.jar" }
+        ext.args         = { "${params.telomere_window_cut}" }
     }
 }
