--- a/subworkflows/sanger-tol/telo_finder/tests/nextflow.config
+++ b/subworkflows/sanger-tol/telo_finder/tests/nextflow.config
@@ -2,11 +2,11 @@ nextflow.enable.moduleBinaries = true
 
 process {
     withName: TELOMERE_WINDOWS {
-        ext.telomere_jar    = { "${moduleDir}/resources/usr/bin/telomere.jar" }
+        ext.args    = { "${params.windows_percent}" }
     }
 
     withName: GAWK {
-        ext.args2           = { "${params.gawk_args}" }
-        ext.suffix          = { "split.telomere" }
+        ext.args2   = { "${params.gawk_args}" }
+        ext.suffix  = "split.telomere"
     }
 }
