--- a/modules/sanger-tol/fastxalign/minimap2align/environment.yml
+++ b/modules/sanger-tol/fastxalign/minimap2align/environment.yml
@@ -6,6 +6,7 @@ channels:
 dependencies:
   - bioconda::htslib=1.22.1
   - bioconda::minimap2=2.30
-  - bioconda::samtools=1.22.1
   - bioconda::pyfastx=2.2.0
+  - bioconda::samtools=1.22.1
   - conda-forge::click=8.3.0
+  - conda-forge::python=3.13
