--- a/modules/sanger-tol/fastxalign/pyfastxindexfasta/meta.yml
+++ b/modules/sanger-tol/fastxalign/pyfastxindexfasta/meta.yml
@@ -1,4 +1,3 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "fastxalign_pyfastxindexfasta"
 description: |
@@ -17,6 +16,7 @@ tools:
         seqeunce from FASTA and reads from FASTQ by identifier and index number.
       homepage: "https://github.com/lmdu/pyfastx"
       licence: ["MIT"]
+      identifier: ""
 input:
   - - meta:
         type: map
@@ -46,6 +46,8 @@ output:
         type: file
         description: File containing software versions
         pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@prototaxites"
 maintainers:
