--- a/modules/sanger-tol/fastxalign/pyfastxindex/meta.yml
+++ b/modules/sanger-tol/fastxalign/pyfastxindex/meta.yml
@@ -23,7 +23,7 @@ input:
         description: |
           Groovy Map containing sample information
           e.g. `[ id:'sample1' ]`
-    - fasta:
+    - fastx:
         type: file
         description: FASTx file of reads to index
         pattern: "*.{fasta,fa,fasta.gz,fa.gz,fq,fq.gz}"
