feat(fastx_map_long_reads): rename subworkflow and fix tests

--- a/subworkflows/sanger-tol/fastx_map_long_reads/meta.yml
+++ b/subworkflows/sanger-tol/fastx_map_long_reads/meta.yml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/sanger-tol/nf-core-modules/refs/heads/main/subworkflows/yaml-schema.json
-name: "fasta_map_long_reads"
+name: "fastx_map_long_reads"
 description: |
-  Map reads from a FASTA file to a reference in chunks, outputting the alignments in BAM or PAF format.
+  Map reads from a FASTx file to a reference in chunks, outputting the alignments in BAM or PAF format.
   If BAM alignment is chosen, the output BAM files are merged.
 keywords:
   - fasta
