--- a/subworkflows/sanger-tol/fastx_map_long_reads/meta.yml
+++ b/subworkflows/sanger-tol/fastx_map_long_reads/meta.yml
@@ -10,14 +10,9 @@ keywords:
   - bam
   - paf
 components:
-  - fastxalign/index
+  - fastxalign/pyfastxindex
   - fastxalign/minimap2align
-  - samtools/faidx:
-      git_remote: https://github.com/nf-core/modules.git
-  - samtools/merge:
-      git_remote: https://github.com/nf-core/modules.git
-  - samtools/markdup:
-      git_remote: https://github.com/nf-core/modules.git
+  - bam_samtools_merge_markdup
   - minimap2/index:
       git_remote: https://github.com/nf-core/modules.git
 input:
