--- a/subworkflows/sanger-tol/telo_finder/tests/nextflow.config
+++ b/subworkflows/sanger-tol/telo_finder/tests/nextflow.config
@@ -2,7 +2,13 @@ nextflow.enable.moduleBinaries = true
 
 process {
     withName: TELOMERE_WINDOWS {
+        tag         = { "${meta.id}_${meta.direction ?: 'FULL'}" }
         ext.args    = { "${params.windows_percent}" }
+        ext.prefix  = { "${meta.id}_${meta.direction}" }
+    }
+
+    withName: TELOMERE_EXTRACT {
+        tag         = { "${meta.id}_${meta.direction ?: 'FULL'}" }
     }
 
     withName: GAWK {
