Updates to tests

--- a/subworkflows/sanger-tol/telo_finder/tests/nextflow.config
+++ b/subworkflows/sanger-tol/telo_finder/tests/nextflow.config
@@ -9,6 +9,7 @@ process {
 
     withName: TELOMERE_EXTRACT {
         tag         = { "${meta.id}_${meta.direction ?: 'FULL'}" }
+        ext.prefix  = { "${meta.id}_${meta.direction ?: 'FULL'}" }
     }
 
     withName: GAWK {
