--- a/subworkflows/sanger-tol/telo_finder/tests/nextflow.config
+++ b/subworkflows/sanger-tol/telo_finder/tests/nextflow.config
@@ -2,14 +2,14 @@ nextflow.enable.moduleBinaries = true
 
 process {
     withName: TELOMERE_WINDOWS {
-        tag         = { "${meta.id}_${meta.direction ?: 'FULL'}" }
+        tag         = { "${meta.id}_${meta.direction}P" }
         ext.args    = { "${params.windows_percent}" }
-        ext.prefix  = { "${meta.id}_${meta.direction}" }
+        ext.prefix  = { "${meta.id}_${meta.direction}P" }
     }
 
     withName: TELOMERE_EXTRACT {
-        tag         = { "${meta.id}_${meta.direction ?: 'FULL'}" }
-        ext.prefix  = { "${meta.id}_${meta.direction ?: 'FULL'}" }
+        tag         = { "${meta.id}_${meta.direction}P" }
+        ext.prefix  = { "${meta.id}_${meta.direction}P" }
     }
 
     withName: GAWK {
