--- a/modules/sanger-tol/samtools/grepreadgroups/meta.yml
+++ b/modules/sanger-tol/samtools/grepreadgroups/meta.yml
@@ -32,10 +32,10 @@ input:
           - edam: http://edamontology.org/format_3462 # CRAM
 output:
   read_group:
-    - - meta:
-          type: map
-          description: |
-            Groovy Map containing sample information. e.g. `[ id:'sample1' ]`
+    - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information. e.g. `[ id:'sample1' ]`
   versions:
     - versions.yml:
         type: file
