--- a/subworkflows/sanger-tol/cram_map_illumina_hic/meta.yml
+++ b/subworkflows/sanger-tol/cram_map_illumina_hic/meta.yml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/sanger-tol/nf-core-modules/refs/heads/main/subworkflows/yaml-schema.json
-name: "hic_mapping"
+name: "cram_map_illumina_hic"
 description: |
   Maps Hi-C reads in unaligned CRAM format to a set of references.
 keywords:
