--- a/subworkflows/sanger-tol/cram_map_illumina_hic/meta.yml
+++ b/subworkflows/sanger-tol/cram_map_illumina_hic/meta.yml
@@ -10,13 +10,8 @@ components:
   - cramalign/gencramchunks
   - cramalign/bwamem2alignhic
   - cramalign/minimap2alignhic
+  - bam_samtools_merge_markdup
   - samtools/index:
-      git_remote: https://github.com/nf-core/modules.git
-  - samtools/faidx:
-      git_remote: https://github.com/nf-core/modules.git
-  - samtools/merge:
-      git_remote: https://github.com/nf-core/modules.git
-  - samtools/markdup:
       git_remote: https://github.com/nf-core/modules.git
   - bwamem2/index:
       git_remote: https://github.com/nf-core/modules.git
